--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SiteDeEventos-1</name>
 	<description>Site de eventos com Spring Boot</description>
-	
-	
+
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -55,17 +55,15 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
-			<scope>provided</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-		</dependency>
+
+		<!-- <dependency> <groupId>org.apache.tomcat.embed</groupId> <artifactId>tomcat-embed-jasper</artifactId> 
+			<scope>provided</scope> </dependency> <dependency> <groupId>javax.servlet</groupId> 
+			<artifactId>jstl</artifactId> </dependency> -->
 
 	</dependencies>
 
