Lado do cliente e lado da empresa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/eventApp
 # Actuator
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.exclude=beans, mapping
+management.endpoints.web.exposure.exclude= mapping
 
 # Data
 spring.datasource.url=jdbc:h2:mem:testdb
