--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.servlet.multipart.max-file-size= 10MB
+spring.servlet.multipart.max-request-size= 10MB
